[metadata]
name = kaitai2WxHexEditor
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/kaitai2WxHexEditor
description = A tool for creating WxHexEditor tags for a file based on Kaitai Struct spec or compiled python file
long_description = file: ReadMe.md
long_description_content_type = text/markdown
keywords = file format, hex editor
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	Intended Audience :: Researchers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = True
pymodules = kaitai2WxHexEditor
include_package_data = True
setup_requires = setuptools_scm;
test_suite = tests.tests.Tests
install_requires =
	plumbum @ git+https://github.com/tomerfiliba/plumbum.git#egg=plumbum
	kaitaistruct @ git+https://github.com/kaitai-io/kaitai_struct_python_runtime.git#egg=kaitaistruct
	kaitaiStructCompile @ git+https://gitlab.com/kaitaiStructCompile.py/kaitaiStructCompile.py.git#egg=kaitaiStructCompile;

[options.entry_points]
console_scripts = kaitai2WxHexEditor = kaitai2WxHexEditor:APPCLI.run

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
